# xai-multiworld

./: .gitignore  cav_training_stats.csv  model_0.pth  model_1.pth  model_10.pth  model_11.pth  model_2.pth  model_3.pth  model_4.pth  model_5.pth  model_6.pth  model_7.pth  model_8.pth  model_9.pth  policy_net.pth  pyproject.toml  pyrightconfig.json  readme.md  srun.err  srun.out
archive/: .gitignore
artifacts/concepts/: goal.json  random.json
artifacts/model_0:v0/: metadata.json  model_0.pth
artifacts/model_0:v1/: metadata.json  model_0.pth
artifacts/model_0:v11/: model_0.pth
artifacts/model_0:v12/: model_0.pth
artifacts/model_0:v2/: metadata.json  model_0.pth
artifacts/model_0:v5/: metadata.json  model_0.pth
artifacts/model_0_0:v0/: metadata.json  model_0_0.pth
artifacts/model_0_0:v1/: metadata.json  model_0_0.pth
artifacts/model_0_0:v2/: metadata.json  model_0_0.pth
artifacts/model_0_100:v0/: metadata.json  model_0_100.pth
artifacts/model_0_100:v1/: metadata.json  model_0_100.pth
artifacts/model_0_150:v0/: metadata.json  model_0_150.pth
artifacts/model_0_150:v1/: metadata.json  model_0_150.pth
assets/: .gitignore
examples/: .multi_go_to_goal.py.swp  __main__.py  agent_go_to_goal.py  agent_go_to_goal_static.py  boxwar.py  cartpole.py  cartpole_ppo.py  cleanup.py  cleanup_static.py  flock.py  flock_ppo.py  go_to_goal.py  go_to_goal_cav_dt.py  go_to_goal_cb.py  go_to_goal_cbm.py  go_to_goal_collect_rollouts.py  go_to_goal_concepts.py  go_to_goal_dt.py  go_to_goal_ppo.py  kaz.py  mpe.py  multi_flock.py  multi_go_to_goal.py  multi_tag.py  pendulum.py  sb_cartpole.py  sb_go_to_goal.py  single_agent_go_to_goal_static.py  tag.py
multigrid/: __main__.py  base.py  wrappers.py
multiworld/: base.py
scripts/: example.py  explain.py  train.py
swarm/: base.py  wrappers.py
utils/: __main__.py
wandb/: latest-run
xailib/: __main__.py
(+71571 files in other folders)
