[tool.poetry]
name = "multigrid"
version = "0.1.0"
description = ""
authors = ["Eirik Reiestad <eirik@reiestad.no>"]
readme = "readme.md"
packages = [{ include = "multigrid", from = "." }]

[tool.poetry.dependencies]

python = "^3.11"
numpy = "2.2.0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pynput = "^1.7.7"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
