[tool.poetry]
name = "xai-multiworld"
version = "0.1.0"
description = ""
authors = ["Eirik Reiestad <eirik@reiestad.no>"]
readme = "readme.md"
packages = [{ include = "multiworld", from = "."}]

[tool.poetry.dependencies]

python = "^3.11"
numpy = ">=1.24,<2.2"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pynput = "^1.7.7"
isort = "^5.13.2"
llvmlite = "^0.44.0"
setuptools = "^75.8.0"
shap = "^0.46.0"
opencv-python = "^4.11.0.86"
gymnasium = "^1.0.0"
pygame = "^2.6.1"
aenum = "^3.1.15"
torch = "^2.6.0"
wandb = "^0.19.5"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
